fixed link vertical alignment

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -14,4 +14,6 @@
         cursor: pointer;
     }
     margin-left: 2%;
+    position: absolute;
+    top: 25%;
 }
